k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
# spec:
#   rules:
#   - host: localhost
#     http:
#       paths:
#       - path: /users
#         pathType: Prefix
#         backend:
#           service:
#             name: user-service
#             port:
#               number: 8001

#       - path: /products
#         pathType: Prefix
#         backend:
#           service:
#             name: product-service
#             port:
#               number: 8003

#       - path: /order-with-product
#         pathType: Prefix
#         backend:
#           service:
#             name: order-service
#             port:
#               number: 8002

#       annotations:
#         nginx.ingress.kubernetes.io/rewrite-target: /



















apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8001

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8003

      - path: /order-with-product
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8002
